--- a/app/src/main/res/layout/fragment_select_location.xml
+++ b/app/src/main/res/layout/fragment_select_location.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -18,10 +18,10 @@
             android:id="@+id/save_btn"
             android:layout_width="0dp"
             android:layout_height="60dp"
-            android:textColor="@color/white"
-            android:text="@string/save"
             android:background="@color/colorPrimary"
             android:backgroundTint="@color/colorPrimary"
+            android:text="@string/save"
+            android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
@@ -36,7 +36,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:ignore="FragmentTagUsage" />
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
